# Gavin-React-Lab

.github/workflows/: azure-static-web-apps-victorious-sea-08ba62c00.yml
app/: page.tsx
app/subpage/: dummyData.tsx  page.tsx
client/: ecosystem.config.js  next.config.js  package-lock.json  package.json
client/app/: layout.tsx  page.tsx
client/app/image-classification-page/: page.tsx  styles.module.scss
client/app/subpage/: page.tsx
flask-server/: pyproject.toml
flask-server/flask_server/: app.py
flask-server/server/: app.py  test.py
server/: index.ts  package-lock.json  package.json
server/routes/: index.ts  test.ts
